<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/layout_full"
	android:orientation="horizontal">
	
    
   <LinearLayout 
		style="@style/layout_horizontal"
		android:layout_weight="4"
		android:orientation="vertical">
		
		 <TextView
        android:id="@+id/stantardSet"
       style="@style/layout_vertical"
        android:text="@string/stantardSet"
        android:textSize="18dip" 
		 android:layout_weight="4"/>	
		 
		
    <TextView
        android:id="@+id/signalSet"
       style="@style/layout_vertical"
        android:text="@string/signalSet"
        android:textSize="18dip" 
		 android:layout_weight="4"/>	
		 
		

    <TextView
        android:id="@+id/abnormalLimitSet"
       style="@style/layout_vertical"
        android:text="@string/abnormalLimitSet"
        android:textSize="18dip" 
		 android:layout_weight="3"/>	
		

	</LinearLayout>
	
   
   <LinearLayout 
		style="@style/layout_horizontal"
		android:layout_weight="4"
		android:orientation="vertical">
    
   
       
         <TextView
        android:id="@+id/stantardIntensity"
       style="@style/layout_vertical"
        android:text="@string/stantardIntensity"
        android:textSize="15dip" 
		 android:layout_weight="3"/>	
		 
         
         <TextView
        android:id="@+id/stantardFrequency"
       style="@style/layout_vertical"
        android:text="@string/stantardFrequency"
        android:textSize="15dip" 
		 android:layout_weight="3"/>	
		 
          <TextView
        android:id="@+id/stantardRatio"
       style="@style/layout_vertical"
        android:text="@string/stantardRatio"
        android:textSize="15dip" 
		 android:layout_weight="3"/>	
		 
          
         <TextView
        android:id="@+id/stantardPosition"
       style="@style/layout_vertical"
        android:text="@string/stantardPosition"
        android:textSize="15dip" 
		 android:layout_weight="3"/>	
		 
       <TextView
        android:id="@+id/displayPeriod"
       style="@style/layout_vertical"
        android:text="@string/displayPeriod"
        android:textSize="15dip" 
		 android:layout_weight="3"/>	   
         
       
        <TextView
        android:id="@+id/sampleTime"
       style="@style/layout_vertical"
        android:text="@string/sampleTime"
        android:textSize="15dip" 
		 android:layout_weight="3"/>	
		 
        
         <TextView
        android:id="@+id/magnifyN"
       style="@style/layout_vertical"
        android:text="@string/magnifyN"
        android:textSize="15dip" 
		 android:layout_weight="3"/>	
		 
          <TextView
        android:id="@+id/signalPosition"
       style="@style/layout_vertical"
        android:text="@string/signalPosition"
        android:textSize="15dip" 
		 android:layout_weight="3"/>	
		 
         <TextView
        android:id="@+id/maxHaleFrequency"
       style="@style/layout_vertical"
        android:text="@string/maxHaleFrequency"
        android:textSize="15dip" 
		 android:layout_weight="3"/>	
		 
        <TextView
        android:id="@+id/minHaleIntensity"
       style="@style/layout_vertical"
        android:text="@string/minHaleIntensity"
        android:textSize="15dip" 
		 android:layout_weight="3"/>	
		 
        
        <Button
        android:id="@+id/setButton"
        style="@style/layout_vertical"
        android:text="@string/ok" 
      android:layout_weight="3"/>	
	</LinearLayout>
	
   
     <LinearLayout 
		style="@style/layout_horizontal"
		android:layout_weight="4"
		android:orientation="vertical">
    
        
         <EditText
        android:id="@+id/stantardIntensityData"
       style="@style/layout_vertical"
        android:textSize="15dip" 
		 android:layout_weight="2"/>	
		 
         
         <EditText
        android:id="@+id/stantardFrequencyData"
       style="@style/layout_vertical"
        android:textSize="15dip" 
		 android:layout_weight="2.5"/>	
		 
          <EditText
        android:id="@+id/stantardRatioData"
       style="@style/layout_vertical"
        android:textSize="15dip" 
		 android:layout_weight="3"/>	
		 
          
         <EditText
        android:id="@+id/stantardPositionData"
       style="@style/layout_vertical"
        android:textSize="15dip" 
		 android:layout_weight="3"/>	
		 
       <EditText
        android:id="@+id/displayPeriodData"
       style="@style/layout_vertical"
        android:textSize="15dip" 
		 android:layout_weight="3"/>	   
         
       
        <EditText
        android:id="@+id/sampleTimeData"
       style="@style/layout_vertical"
        android:textSize="15dip" 
		 android:layout_weight="3"/>	
		 
        
         <EditText
        android:id="@+id/magnifyNData"
       style="@style/layout_vertical"
        android:textSize="15dip" 
		 android:layout_weight="3"/>	
		 
          <EditText
        android:id="@+id/signalPositionData"
       style="@style/layout_vertical"
        android:textSize="15dip" 
		 android:layout_weight="3"/>	
		 
         <EditText
        android:id="@+id/maxHaleFrequencyData"
       style="@style/layout_vertical"
        android:textSize="15dip" 
		 android:layout_weight="3"/>	
		 
        <EditText
        android:id="@+id/minHaleIntensityData"
       style="@style/layout_vertical"
        android:textSize="15dip" 
		 android:layout_weight="3"/>	
		  
         
         
        
     <View
	 		style="@style/layout_vertical"
	 		android:background="#ffffff"
	 		android:layout_weight="5"/>	
	</LinearLayout>
   
   
   </LinearLayout>