
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.8"
        android:orientation="vertical" >
        
        <plugin.android.ss.com.breatheexercisehelper.ComplexGraph
            android:id="@+id/graphicView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp" />
    
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:orientation="vertical" >
        
         <TableLayout  
            android:id="@+id/table1"  
            android:layout_width="fill_parent"  
            android:layout_height="wrap_content" 
            android:stretchColumns="1" >   
     
           <TableRow >  
               
          <TextView
                 android:id="@+id/inhaleTimeView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                   android:textSize="18dip" />
                 />
                 
                   <TextView
          android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
                 
                   <TextView
                 android:id="@+id/haleIntensityView"
                 android:layout_width="200dip"
                 android:layout_height="wrap_content"
                 android:textColor="#ff0000"
                 android:textSize="20dip" />
             />
             </TableRow>  
        </TableLayout>    
        
         
          <TextView
          android:layout_width="fill_parent"
          android:layout_height="25dip"/>
         
           <TableLayout  
            android:id="@+id/table2"  
            android:layout_width="fill_parent"  
            android:layout_height="wrap_content"  
            android:stretchColumns="1" >   
     
           <TableRow >  
           
               
                     <TextView
                 android:id="@+id/exhaleTimeView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                   android:textSize="18dip" />
                 />
                 
                 
                 <TextView
          android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
                 
            <TextView
                 android:id="@+id/haleFrequencyView"
                 android:layout_width="200dip"
                 android:layout_height="wrap_content"
                  android:textColor="#ff0000"
                 android:textSize="20dip" />
             />
              </TableRow>  
        </TableLayout>   
         
        
            <TextView
          android:layout_width="fill_parent"
         android:layout_height="25dip"/>
            
             <TableLayout  
            android:id="@+id/table3"  
            android:layout_width="fill_parent"  
            android:layout_height="wrap_content"  
            android:stretchColumns="1" >   
     
           <TableRow >
           
                <TextView
                 android:id="@+id/haleRatioView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                   android:textColor="#ff0000"
                 android:textSize="20dip" />
                
             />
             
               </TableRow>  
        </TableLayout>  
        
               <TextView
          android:layout_width="fill_parent"
         android:layout_height="25dip"/> 
        <TableLayout  
            android:id="@+id/table4"  
            android:layout_width="fill_parent"  
            android:layout_height="wrap_content"  
            android:stretchColumns="1" >   
     
           <TableRow >
           
                <TextView
                 android:id="@+id/scoreView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="18dip" />
                
                <TextView
          android:layout_width="fill_parent"
         android:layout_height="50dip"/>
                
                 <TextView
                 android:id="@+id/SOCView"
                 android:layout_width="200dip"
                 android:layout_height="wrap_content"
                 android:textSize="18dip"  />
             />
             
               </TableRow>  
        </TableLayout>         
             
           
    </LinearLayout>

 
    
    <LinearLayout
        android:id="@+id/linearLayoutControl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3.2"
        android:orientation="vertical"
        android:layout_margin="10dp" >
        
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal" >

             <Button
                 android:id="@+id/buttonConnect"
                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/connect" 
                  android:textSize="12dip"/>
             
              <Button
                 android:id="@+id/buttonSet"
                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/set" 
                  android:textSize="12dip"/>
              
               <Button
                 android:id="@+id/buttonUpdatePower"
                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/UpdatePower"
                  android:textSize="12dip" />
               
                <Button
                 android:id="@+id/buttonQueryData"
                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/QueryData"
                  android:textSize="12dip" />

             <Chronometer
                 android:id="@+id/testTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:textColor="#ff0000"
                 android:textSize="18dip" />
         </LinearLayout>
    
    </LinearLayout>

</LinearLayout>